# WoR-CareRobot

./: .clang-format  .gitignore  .gitmodules  Doxyfile  README.md
kinematica/kinematics/: CMakeLists.txt  package.xml
kinematica/kinematics/maxima/: JacobiOne  JacobiSubst  README.md  RandomConfig  StraightUp  analytical_jacobian.mac  forward_kinematics.mac  jacobi_matrix_test.mac  jacobian_to_hpp.py
kinematica/kinematics/src/: denavit_hartenberg_3d.cpp
kinematica/kinematics/unitTests/: BetaGenerator_test.cpp  Configuration_test.cpp  DenavitHartenberg_test.cpp  EndEffector_test.cpp  EulerAngles_test.cpp  JacobiMatrix_test.cpp  Link_test.cpp  RobotConfiguration_test.cpp  UtilityFunctions_test.cpp  gtest.cpp
kinematica/matrix/: CMakeLists.txt  README.md  package.xml
kinematica/matrix/unitTests/: Matrix_test.cpp  gtest.cpp
kinematica/matrix/unittest/: Main.cpp  Matrix_test.cpp
simulatie/current_sim_world/: CMakeLists.txt  README.md  package.xml
simulatie/current_sim_world/launch/: world.launch
simulatie/current_sim_world/worlds/: franka_empty.world
simulatie/sen_sonar/: CMakeLists.txt  package.xml
simulatie/sen_sonar/launch/: launch.launch
simulatie/sim_agv/: CMakeLists.txt  package.xml
simulatie/sim_agv/include/: automated_guided_vehicle_plugin.hpp
simulatie/sim_agv/msg/: agv_path.msg
simulatie/sim_agv/src/: automated_guided_vehicle_plugin.cpp
simulatie/sim_child/: CMakeLists.txt
simulatie/sim_child/src/: child.cpp
simulatie/sim_cup/: CMakeLists.txt  README.md  package.xml
simulatie/sim_cup/msg/: cup_info.msg
simulatie/sim_cup/worlds/: cup.world
simulatie/sim_kinect/: CMakeLists.txt  README.md  package.xml
simulatie/sim_kinect/launch/: test.launch
simulatie/sim_lidar/: CMakeLists.txt  README.md  package.xml
simulatie/sim_lidar/launch/: test.launch
simulatie/sim_lidar/src/: LidarPlugin.cpp
simulatie/sim_robot/: CMakeLists.txt  package.xml
simulatie/sim_robot/msg/: commandT.msg
simulatie/sim_robot/src/: Command.cpp  CommandParser.cpp  JointController.cpp  publisher.cpp  robot_controller_plugin.cpp
simulatie/sim_robot/test/: JointController_test.cpp  al5d_CommandParser_test.cpp
simulatie/sim_robot/worlds/: al5d.world
simulatie/sim_sonar/: CMakeLists.txt  package.xml
simulatie/sim_sonar/launch/: test.launch
simulatie/sim_sonar/src/: GazeboRosSonar.cpp
simulatie/sim_sonar/worlds/: test.world
simulation/sim_child/: CMakeLists.txt  README.md  package.xml
simulation/sim_child/launch/: launch.launch
simulation/sim_child/src/: child.cpp
simulation/sim_child/unitTests/: child.cpp  gtest.cpp
simulation/sim_child/worlds/: child.world
simulation/sim_cup/: package.xml
simulation/sim_cup/launch/: just_a_cup.launch
simulation/sim_cup/src/: CupPlugin.cpp
simulation/sim_cup/test/: cup_plugin_test.cpp
simulation/sim_kinect/: CMakeLists.txt  README.md  package.xml
simulation/sim_kinect/src/: KinectPlugin.cpp
simulation/sim_kinect/worlds/: test.world
simulation/sim_lidar/: CMakeLists.txt  README.md  package.xml
simulation/sim_lidar/datasets/: lidardataset1.txt  lidardataset2.txt
simulation/sim_lidar/launch/: test.launch
simulation/sim_lidar/src/: CalculateData.cpp  GenerateNoise.cpp  LidarPlugin.cpp  Main.cpp
simulation/sim_lidar/unitTests/: CalculateData_UnitTests.cpp  GenerateNoise_UnitTests.cpp  LidarPlugin_UnitTests.cpp  gtest.cpp
simulation/sim_lidar/worlds/: test.world
simulation/sim_robot/: CMakeLists.txt  README.md  package.xml
simulation/sim_robot/launch/: al5d.launch  franka.launch
simulation/sim_robot/msg/: commands.msg  gripper.msg
simulation/sim_robot/src/: Command.cpp  CommandData.cpp  CommandParser.cpp  ControlData.cpp  FrankaFeedback.cpp  GripperData.cpp  IRobotControlPlugin.cpp  JointController.cpp  RobotControllerPlugin.cpp  StopData.cpp  publisher.cpp  robot_controller_plugin.cpp
simulation/sim_robot/test/: JointController_test.cpp  al5d_CommandParser_test.cpp
simulation/sim_robot/unitTests/: Command.cpp  CommandParser.cpp  JointController.cpp  gtest.cpp
simulation/sim_robot/worlds/: franka.world  franka_cup.world
simulation/sim_sonar/: CMakeLists.txt  README.md  package.xml
simulation/sim_sonar/src/: CustomGazeboRosSonar.cpp  GazeboRosSonar.cpp
simulation/sim_torque/: CMakeLists.txt  README.md  package.xml  txt.txt
simulation/sim_torque/msg/: collision_behavior.msg
simulation/sim_torque/src/: CollisionBehaviorData.cpp  CollisionBehaviorHandler.cpp  CollisionBehaviorModel.cpp  CollisionBehaviorSubscriber.cpp  Joint.cpp  Main.cpp  Threshold.cpp
simulation/sim_torque/worlds/: test.world
simulation/sim_webcam/: CMakeLists.txt  README.md  package.xml
simulation/sim_webcam/launch/: test.launch
simulation/sim_webcam/src/: WebcamPlugin.cpp
simulation/sim_webcam/unitTests/: gtest.cpp
simulation/sim_webcam/worlds/: test.world
simulation/sim_world/: CMakeLists.txt  README.md  package.xml
simulation/sim_world/launch/: demo_tussentijds.launch  world.launch
simulation/sim_world/scripts/: prototype_body_lidar_quad_tree_node
simulation/sim_world/worlds/: child_with_lidar.world  child_with_robotarm.world  current_sim_world.world  franka.world  franka_agv.world
simulation/sonar_interpreter/: CMakeLists.txt  package.xml
simulation/sonar_interpreter/msg/: ObjectSpeed.msg
simulation/sonar_interpreter/src/: SonarInterpreter.cpp  sonar_interpreter_node.cpp
vision/kinect_cup_detector/: CMakeLists.txt  package.xml
vision/kinect_cup_detector/unitTests/: gtest.cpp
vision/kinect_driver/: CMakeLists.txt  README.md  package.xml
vision/kinect_driver/unitTests/: gtest.cpp
vision/lidar_application/: CMakeLists.txt  README.md  package.xml
vision/lidar_application/include/: DataHandler.h  DataHandler.hpp  LidarData.h  LidarData.hpp  ObjectDetection.h  ObjectDetection.hpp
vision/lidar_application/launch/: lidar_application.launch
vision/lidar_application/src/: DataHandler.cpp  LidarData.cpp  ObjectDetection.cpp  main.cpp
vision/lidar_application/unitTests/: gtest.cpp  (+5 more)
vision/location_component/: CMakeLists.txt  README.md  package.xml  resized_plugins.xml
(+545 files in other folders)
