<?xml version="1.0"?>
<package format="2">
  <name>sen_sonar</name>
  <version>1.0.0</version>
  <description>The sen_sonar package</description>

  <maintainer email="BJ.Cop@student.han.nl">Bas</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>rosunit</test_depend>

  <export>

  </export>
</package>
