<?xml version="1.0"?>
<package format="2">
  <name>sim_cup</name>
  <version>0.0.0</version>
  <description>The sim_cup package</description>

  <maintainer email="wor1819s1@gmail.com">Wor project team 1819 s1</maintainer>

  <license>BSD</license>

  <author email="BJ.Cop@student.han.nl">Bas  Cop </author>
  <author email="BT.Pellen@student.han.nl">Bram  Pellen </author>
  <author email="D.Sperber@student.han.nl">Daan  Sperber </author>
  <author email="DPJM.Bergevoet@student.han.nl">David  Bergevoet </author>
  <author email="DTWA.Fontein@student.han.nl">Dennis  Fontein </author>
  <author email="H.vanderHeide@student.han.nl">Harm  van  der  Heide </author>
  <author email="HS.Paijmans@student.han.nl">Harrie  Paijmans </author>
  <author email="HHA.Kuunders@student.han.nl">Henri  Kuunders </author>
  <author email="JA.Bouwhuis@student.han.nl">Jelle  Bouwhuis </author>
  <author email="JW.Sloot@student.han.nl">Jesper  Sloot </author>
  <author email="LHJ.Nooteboom@student.han.nl">Luke  Nooteboom </author>
  <author email="M.vanDiermen1@student.han.nl">Mees  van  Diermen </author>
  <author email="TK.vandenHazel@student.han.nl">Timo  van  den  Hazel </author>
  <author email="WM.vanUum@student.han.nl">Wouter  van  Uum </author>
  <author email="YS.Will@student.han.nl">Yori  Will </author>

  <test_depend>rosunit</test_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>	
  

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>

  </export>
</package>
