<?xml version="1.0"?>
<package format="2">
    <name>sim_kinect</name>
    <version>1.0.0</version>
    <description>
        The sim_kinect package pulls data from a simulated kinect sensor in a Gazebo world and publishes it on a ROS topic
    </description>

    <maintainer email="BJ.Cop@student.han.nl">Bas Cop</maintainer>
    <maintainer email="TDJ.deWinkel@student.han.nl">Thomas de Winkel</maintainer>
    <license>BSD</license>
    <test_depend>rosunit</test_depend>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>sensor_interfaces</depend>
    <build_depend>gazebo_msgs</build_depend>
    <build_depend>gazebo_plugins</build_depend>
    <build_depend>gazebo_ros</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>environment_controller</build_depend>
    <build_export_depend>gazebo_msgs</build_export_depend>
    <build_export_depend>gazebo_plugins</build_export_depend>
    <build_export_depend>gazebo_ros</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>gazebo_msgs</exec_depend>
    <exec_depend>gazebo_plugins</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>environment_controller</exec_depend>
    <export>

    </export>
</package>
